--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,22 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+# Others
+.gradle
+!gradle/wrapper/gradle-wrapper.jar
+log/
+bin/
+build/
+dist/
+nativebuild/
+*.log
+
+.idea/
+.idea/gradle.xml
+*.iws
+*.iml
+*.ipr
+out/
+taobaoCraw/
