--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
-apply plugin: 'java'
+plugins {
+    id 'org.springframework.boot' version '2.1.4.RELEASE'
+    id 'java'
+}
+
+apply plugin: 'io.spring.dependency-management'
 
 group 'org.hl'
 version '1.0'
+sourceCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
@@ -12,18 +18,19 @@ repositories {
     mavenCentral()
 }
 
-buildscript{
-    repositories{
-        mavenCentral()
-    }
+configurations {
+    // 避免slf4j和springboot冲突
+    all*.exclude group:'ch.qos.logback', module:'logback-classic'
 }
 
 dependencies {
     compile 'cn.edu.hfut.dmic.webcollector:WebCollector:2.73-alpha'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    //compile('org.springframework.boot:spring-boot-starter-web:2.0.0.RELEASE')
+    compile 'org.springframework.boot:spring-boot-starter'
+    //compile 'org.springframework.boot:spring-boot-starter-web'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'junit:junit'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
 
