:sparkles: 完成StockDownloadSaver下载保存器。

--- a/stock-core/src/main/resources/application.properties
+++ b/stock-core/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8080
+# \u4E0B\u8F7D\u5143\u6570\u636E\u4EFB\u52A1
+stock.task.StockDownloadTask.downloadStockMetas.initialDelay=3000
+stock.task.StockDownloadTask.downloadStockMetas.fixedRate=60000
