:sparkles: mybatis db操作

--- a/stock-core/build.gradle
+++ b/stock-core/build.gradle
@@ -29,8 +29,10 @@ dependencies {
     compile 'cn.edu.hfut.dmic.webcollector:WebCollector:2.73-alpha'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    //compile 'org.springframework.boot:spring-boot-starter'
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.0'
+    compile 'mysql:mysql-connector-java'
+
 
     testCompile 'junit:junit'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
