--- a/stock-core/src/main/resources/application.properties
+++ b/stock-core/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=8080
 # db
 mybatis.type-aliases-package=com.hl.stock.core.base.model
-spring.datasource.url=jdbc:mysql://localhost:3306/stock?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/stock?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # \u4E0B\u8F7D\u5143\u6570\u636E\u4EFB\u52A1
-stock.task.StockDownloadTask.downloadStockMetas.initialDelay=3000
-stock.task.StockDownloadTask.downloadStockMetas.fixedRate=60000
+stock.task.StockDownloadTask.downloadAllStockHistoryData.initialDelay=3000
+stock.task.StockDownloadTask.downloadAllStockHistoryData.fixedRate=60000
+stock.task.StockDownloadTask.downloadAllStockHistoryData.startDate=2000-01-01
