--- a/stock-core/src/main/resources/application.properties
+++ b/stock-core/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # \u4E0B\u8F7D\u5143\u6570\u636E\u4EFB\u52A1
-stock.task.StockDownloadTask.downloadAllStockHistoryData.initialDelay=3000
+# \u4EFB\u52A1\u542F\u52A8\u5EF6\u8FDF(ms)
+stock.task.StockDownloadTask.downloadAllStockHistoryData.initialDelay=1000
+# \u4EFB\u52A1\u91CD\u590D\u68C0\u67E5\u95F4\u9694(ms), \u4F46\u662F\u4EFB\u52A1\u672C\u8EAB\u6709\u6807\u5FD7\uFF0C\u5982\u679C\u5DF2\u7ECF\u542F\u52A8\u4E86\uFF0C\u5C31\u4E0D\u4F1A\u91CD\u590D\u6267\u884C\u3002\u4FDD\u8BC1\u53EA\u6267\u884C\u4E00\u6B21\u3002
 stock.task.StockDownloadTask.downloadAllStockHistoryData.fixedRate=60000
+# \u4E0B\u8F7D\u80A1\u7968\u5386\u53F2\u6570\u636E\u7684\u8D77\u59CB\u65F6\u95F4
 stock.task.StockDownloadTask.downloadAllStockHistoryData.startDate=2000-01-01
+# \u6BCF\u53EA\u80A1\u7968\u4E0B\u8F7D\u5230\u4E0B\u4E2A\u80A1\u7968\u4E0B\u8F7D\u4E4B\u95F4\u7684\u65F6\u95F4\u95F4\u9694(ms)\uFF0C\u907F\u514D\u88AB\u670D\u52A1\u7AEF\u548C\u8C10
+stock.task.StockDownloadTask.downloadAllStockHistoryData.delayPerStock=50
