:bug: 反和谐间隔时间调整为200ms

--- a/stock-core/src/main/resources/application.properties
+++ b/stock-core/src/main/resources/application.properties
@@ -13,5 +13,5 @@ stock.task.StockDownloadTask.downloadAllStockHistoryData.initialDelay=1000
 stock.task.StockDownloadTask.downloadAllStockHistoryData.fixedRate=60000
 # \u4E0B\u8F7D\u80A1\u7968\u5386\u53F2\u6570\u636E\u7684\u8D77\u59CB\u65F6\u95F4
 stock.task.StockDownloadTask.downloadAllStockHistoryData.startDate=2000-01-01
-# \u6BCF\u53EA\u80A1\u7968\u4E0B\u8F7D\u5230\u4E0B\u4E2A\u80A1\u7968\u4E0B\u8F7D\u4E4B\u95F4\u7684\u65F6\u95F4\u95F4\u9694(ms)\uFF0C\u907F\u514D\u88AB\u670D\u52A1\u7AEF\u548C\u8C10
-stock.task.StockDownloadTask.downloadAllStockHistoryData.delayPerStock=50
+# \u6BCF\u53EA\u80A1\u7968\u4E0B\u8F7D\u5230\u4E0B\u4E2A\u80A1\u7968\u4E0B\u8F7D\u4E4B\u95F4\u7684\u65F6\u95F4\u95F4\u9694(ms)\uFF0C\u907F\u514D\u88AB\u670D\u52A1\u7AEF\u548C\u8C10. 200\u6BD4\u8F83\u5408\u9002. 50\u4F1A\u5BFC\u81F4\u8FC7\u5EA6\u7ADE\u4E89\uFF0C\u7EBF\u7A0B\u6765\u56DE\u5207\u6362\u53CD\u800C\u6162.
+stock.task.StockDownloadTask.downloadAllStockHistoryData.delayPerStock=200
