--- a/stock-core/src/main/resources/log4j.properties
+++ b/stock-core/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 ### \u8BBE\u7F6E###
 log4j.rootLogger=info,stdout,I,E
-log4j.logger.cn.edu.hfut.dmic.webcollector=error,stdout,E
+# log4j.logger.com.hl.stock.core.common.util.PerformanceUtils=error,I,E
 ### \u8F93\u51FA\u4FE1\u606F\u5230\u63A7\u5236\u62AC ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
