--- a/stock-core/src/main/resources/application.properties
+++ b/stock-core/src/main/resources/application.properties
@@ -5,12 +5,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/stock?serverTimezone=Asia/Shan
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # \u4EFB\u52A1
-## \u4E0B\u8F7D\u5143\u6570\u636E\u4EFB\u52A1
+## \u901A\u7528\u4EFB\u52A1
 ### \u4EFB\u52A1\u542F\u52A8\u5EF6\u8FDF(ms)
-stock.task.StockDownloadTask.downloadAllStockHistoryData.initialDelay=1000
+stock.task.default.initialDelay=1000
 ### \u4EFB\u52A1\u91CD\u590D\u68C0\u67E5\u95F4\u9694(ms), \u4F46\u662F\u4EFB\u52A1\u672C\u8EAB\u6709\u6807\u5FD7\uFF0C\u5982\u679C\u5DF2\u7ECF\u542F\u52A8\u4E86\uFF0C\u5C31\u4E0D\u4F1A\u91CD\u590D\u6267\u884C\u3002\u4FDD\u8BC1\u53EA\u6267\u884C\u4E00\u6B21\u3002
-stock.task.StockDownloadTask.downloadAllStockHistoryData.fixedRate=60000
+stock.task.default.fixedRate=60000
+
 ## \u4E0B\u8F7D\u5386\u53F2\u6570\u636E\u4EFB\u52A1
 ### \u8D77\u59CB\u65F6\u95F4
 stock.task.StockDownloadTask.downloadAllStockHistoryData.startDate=2000-01-01
@@ -21,3 +23,5 @@ stock.task.StockDownloadTask.downloadAllStockHistoryData.delayPerStock=200
 stock.task.downloadAllStockHistoryData.autostart=false
 ### \u662F\u5426\u542F\u52A8\u540E\u81EA\u52A8\u8865\u5F55\u5386\u53F2\u6570\u636E
 stock.task.complementAllStockHistoryData.autostart=false
+### \u662F\u5426\u542F\u52A8\u540E\u81EA\u52A8\u5BFB\u627E\u6700\u4F18\u7B56\u7565
+stock.task.findBestStrategy.autostart=true
