:sparkles: 完成策略评估展示
TODO:
推荐股票展示。

--- a/stock-core/src/main/resources/application.properties
+++ b/stock-core/src/main/resources/application.properties
@@ -24,4 +24,4 @@ stock.task.downloadAllStockHistoryData.autostart=false
 ### \u662F\u5426\u542F\u52A8\u540E\u81EA\u52A8\u8865\u5F55\u5386\u53F2\u6570\u636E
 stock.task.complementAllStockHistoryData.autostart=false
 ### \u662F\u5426\u542F\u52A8\u540E\u81EA\u52A8\u5BFB\u627E\u6700\u4F18\u7B56\u7565
-stock.task.findBestStrategy.autostart=true
+stock.task.findBestStrategy.autostart=false
