增加股票数据更新时间表 修改前端一键荐股BUG

--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,8 @@ subprojects {
     }
 
     // 允许静态资源刷新后自动liveReload热部署
-    bootRun {
-        addResources = true
-    }
+//    bootRun {
+//        addResources = true
+//    }
 }
 
